{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 98,
  "lineage": "06b2d404-a3f7-1049-2937-b60d05356cfe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073895727668:internet-gateway/igw-007fb632dcab9988a",
            "id": "igw-007fb632dcab9988a",
            "owner_id": "073895727668",
            "tags": {
              "env": "dev",
              "project_name": "demo"
            },
            "tags_all": {
              "env": "dev",
              "project_name": "demo"
            },
            "vpc_id": "vpc-0d5ae3f0311f5ba67"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073895727668:route-table/rtb-0b1fdaba40da01e90",
            "id": "rtb-0b1fdaba40da01e90",
            "owner_id": "073895727668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007fb632dcab9988a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "env": "dev",
              "project_name": "demo"
            },
            "tags_all": {
              "env": "dev",
              "project_name": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5ae3f0311f5ba67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aedd6d94191eb172",
            "route_table_id": "rtb-0b1fdaba40da01e90",
            "subnet_id": "subnet-0ea208dc82a2b7f67"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0299a456c4419f415",
            "route_table_id": "rtb-0b1fdaba40da01e90",
            "subnet_id": "subnet-07afdf2c887dd4d97"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073895727668:security-group/sg-0f3f828c798a6df11",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3f828c798a6df11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "websg-demo-dev",
            "name_prefix": "",
            "owner_id": "073895727668",
            "revoke_rules_on_delete": false,
            "tags": {
              "env": "dev",
              "project_name": "demo"
            },
            "tags_all": {
              "env": "dev",
              "project_name": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5ae3f0311f5ba67"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073895727668:subnet/subnet-0ea208dc82a2b7f67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea208dc82a2b7f67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "073895727668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "dev",
              "project_name": "demo"
            },
            "tags_all": {
              "env": "dev",
              "project_name": "demo"
            },
            "vpc_id": "vpc-0d5ae3f0311f5ba67"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073895727668:subnet/subnet-07afdf2c887dd4d97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07afdf2c887dd4d97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "073895727668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "env": "dev",
              "project_name": "demo"
            },
            "tags_all": {
              "env": "dev",
              "project_name": "demo"
            },
            "vpc_id": "vpc-0d5ae3f0311f5ba67"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:073895727668:vpc/vpc-0d5ae3f0311f5ba67",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07868c5e0592a3998",
            "default_route_table_id": "rtb-06e57ee218bb376df",
            "default_security_group_id": "sg-0f026484a758e0053",
            "dhcp_options_id": "dopt-029f5463e4ee1efea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5ae3f0311f5ba67",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e57ee218bb376df",
            "owner_id": "073895727668",
            "tags": {
              "env": "dev",
              "project_name": "demo"
            },
            "tags_all": {
              "env": "dev",
              "project_name": "demo"
            }
          }
        }
      ]
    }
  ]
}